# FlowRAG

./: .gitignore  Pipfile  README.md  config.json  pipeline.py  pyproject.toml  requirements.txt  testing.py  user_config.json
.github/workflows/: deployment_flowrag.yml  deployment_flowrag1.yml
backend/: 01_.py  chat.py  index.py  load.py  options.txt  query_engine.py  reciprocalrerankfusionretriever.py  subquestionqueryengine.py  transform.py  utils.py
backend/flowrag/: load.py  query_engine.py  util.py
backend/models/: embedding.py  llm.py
frontend/: app.py
frontend/pages/: config.py  data.py  pipeline.py  summary.py
src/: app.py
src/backend/: __init__.py  reciprocalrerankfusionretriever.py  subquestionqueryengine.py  utils.py
src/backend/flowrag/: _Multi-StepQueryEngine.py  index.py  transform.py
src/backend/flowrag/models/: embedding.py
src/pages/: chat.py  config.json  data.py  pipeline.py  summary.py  user_config.json
storage/: chat_store.json  config.json
storage/chromadb/: chroma.sqlite3
storage/data/: config.json
testing/: 01_reciprocalrerankfusionretriever.py  pipeline.py  test01_pipeline.py  test02_SimpleQueryEngine.py  test03_chromadb.py  test04_qdrant.py  test_pipeline_01.py
testing/legacy/: test03_chromadb.py  test04_qdrant.py
