[tool.poetry]
name = "flowrag"
version = "0.1.0"
description = "A Web Based RAG Pipeline Builder"
authors = ["Inamul Hassan <hassan.inamul@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
langchain = "^0.1.10"
llama-index = "^0.10.15"
chromadb = "^0.4.24"
qdrant-client = "^1.7.3"
streamlit = "^1.31.1"
streamlit-antd-components = "^0.3.2"
llama-index-embeddings-huggingface = "^0.1.4"
llama-index-embeddings-gemini = "^0.1.4"
llama-index-vector-stores-qdrant = "^0.1.3"
llama-index-llms-gemini = "^0.1.4"
llama-index-llms-ollama = "^0.1.2"
llama-index-llms-anthropic = "^0.1.3"
llama-index-llms-mistralai = "^0.1.4"
llama-index-retrievers-bm25 = "^0.1.3"
traceloop-sdk = "^0.13.1"
arize-phoenix = "^3.5.0"
llama-index-callbacks-arize-phoenix = "^0.1.4"
streamlit-extras = "^0.4.0"
streamlit-shadcn-ui = "^0.1.18"
st-pages = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
